# tricky

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_filter_items.py  example_typing.py
scripts/: write_version.py
tests/: conftest.py
tests/fixtures/: helpers.py
tests/src/: test_decorators.py  test_example.py  test_iterables.py  test_typings.py
tricky/: __init__.py  getters.py  iterables.py  typing.py
tricky/pydantic/: __init__.py  mutators.py  types.py
tricky/utils/: __init__.py  decorators.py
