[tool.poetry]
name = "tricky"
version = "0.0.14"

authors = ["Alexander Walther <alexander.walther.engineering@gmail.com>"]

description = "A set of useful features to make working with your code easier."
documentation = ""
homepage = "https://github.com/Walther-s-Engineering/tricky"
keywords = ["tools"]

readme = "README.md"

license = "MIT"

classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: POSIX :: Linux',
    'Topic :: Utilities',
]
packages = [
    { include = "tricky" }
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {version = "1.10.4", optional = true}
typing-extensions = ">=4.4.0"

[tool.poetry.group.dev.dependencies]
toml = "0.10.2"
mypy = ">=0.991"
pytest = ">=7.2.1"
poethepoet = "^0.18.1"

[tool.poetry.extras]
pydantic = ['pydantic']

[tool.poe.tasks.publish-and-build]
cmd = "poetry publish --build"

[tool.poe.tasks.add-changes]
cmd = "git add -A"

[tool.poe.tasks.commit-version]
cmd = "git commit -S -m '[main] Version __init__ file upgrade'"

[tool.poe.tasks.write-version]
script = "scripts.write_version:get_project_version"
print_result = true

[tool.poe.tasks.ship-it]
sequence = [
    "write-version",
    "add-changes",
    "commit-version",
    "publish-and-build",
]
help = "Build and deploy"

[tool.pytest]
addopts = "-W ignore -s"
testspath = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
